change hover to click, fix some display problem. Problem remaining: when resize window from small to large, and change page, the icons on the second row will have too small height

--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,14 @@ color: rgb(7, 130, 197);
 	border-radius: 10px;
 	box-shadow: 0 4px 6px rgba(0,0,0,0.4);
 	cursor: pointer;
+	position: relative;
 }
 
 .picture {
 	display: block;
 	border-radius: 10px;
 	overflow: hidden;
+	position: absolute;
 }
 
 .picture img {
@@ -61,7 +63,7 @@ color: rgb(7, 130, 197);
 }
 
 .info{
-	position: relative;
+	position: absolute;
 	display: none;
 	width:100%;
 	height:100%;
@@ -90,7 +92,7 @@ p.name {
 	background: url('../images/play.png');
 	background-size: contain;
 	display: block;
-	margin: 10px auto;
+	margin: 5px auto;
 }
 
 .video a {
